--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Snake | Simple Tools</title>
-  <meta name="description" content="Play Snake online with keyboard or on-screen controls. Mobile-friendly, dark/light theme, Swedish/English, and local high score." />
+  <meta name="description" content="Play classic Snake online with keyboard or on-screen controls. Mobile-friendly, dark/light theme, Swedish/English, and local high score." />
 
   <link rel="canonical" href="https://simple-tools-dev.github.io/snake/" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
@@ -69,14 +69,13 @@
       --ms-hi: rgba(255,255,255,0.16);
       --ms-lo: rgba(0,0,0,0.55);
 
-      /* Snake board sizing (responsive) */
+      /* board sizing (responsive) */
       --cell: 22px;
-      --gap: 2px;
-      --pad: 10px;
+      --gap: 0px;
+      --pad: 14px;
 
       --mobileCell: 16px;
-      --mobileGap: 2px;
-      --mobilePad: 8px;
+      --mobilePad: 10px;
 
       --hintStroke: rgba(110,231,255,0.90);
       --hintGlow: rgba(110,231,255,0.35);
@@ -86,6 +85,14 @@
       --selectedGlow: rgba(255,255,255,0.25);
       --winStroke: rgba(52,211,153,0.95);
       --winGlow: rgba(52,211,153,0.35);
+
+      /* Snake visuals */
+      --gridLine: rgba(255,255,255,0.06);
+      --snakeHi: rgba(110,231,255,0.70);
+      --snakeLo: rgba(52,211,153,0.85);
+      --snakeStroke: rgba(255,255,255,0.14);
+      --food: rgba(251,113,133,0.95);
+      --foodGlow: rgba(251,113,133,0.20);
     }
     :root[data-theme="light"]{
       --bg:#f7f7fb; --bg2:#ffffff;
@@ -112,6 +119,10 @@
       --selectedGlow: rgba(0,0,0,0.18);
       --winStroke: rgba(22,163,74,0.92);
       --winGlow: rgba(22,163,74,0.22);
+
+      --gridLine: rgba(0,0,0,0.06);
+      --snakeStroke: rgba(0,0,0,0.12);
+      --foodGlow: rgba(251,113,133,0.12);
     }
 
     *{ box-sizing:border-box; }
@@ -242,7 +253,7 @@
       -webkit-overflow-scrolling: touch;
     }
 
-    /* Snake "board" */
+    /* --- SNAKEY PLAYFIELD --- */
     .board{
       position: relative;
       padding: var(--pad);
@@ -250,81 +261,160 @@
       grid-template-columns: repeat(var(--cols), var(--cell));
       grid-template-rows: repeat(var(--rows), var(--cell));
       gap: var(--gap);
-      background: rgba(0,0,0,0.18);
-      border: 1px solid rgba(255,255,255,0.10);
-      box-shadow:
-        inset 1px 1px 0 var(--ms-lo),
-        inset -1px -1px 0 var(--ms-hi);
-      border-radius: 14px;
+      border-radius: 18px;
       width: fit-content;
       user-select:none;
-      touch-action: manipulation;
+      touch-action: none;
+
+      /* "Classic snake" feel: darker playfield + subtle grid */
+      background:
+        linear-gradient(180deg, rgba(0,0,0,0.22), rgba(0,0,0,0.12)),
+        radial-gradient(900px 520px at 50% 20%, rgba(110,231,255,0.10), transparent 55%),
+        rgba(0,0,0,0.18);
+
+      border: 1px solid rgba(255,255,255,0.12);
+      box-shadow:
+        var(--shadow),
+        inset 1px 1px 0 rgba(255,255,255,0.06),
+        inset -1px -1px 0 rgba(0,0,0,0.35);
+      overflow: hidden;
     }
     :root[data-theme="light"] .board{
-      background: rgba(0,0,0,0.06);
+      background:
+        linear-gradient(180deg, rgba(0,0,0,0.06), rgba(0,0,0,0.03)),
+        radial-gradient(900px 520px at 50% 20%, rgba(14,165,233,0.10), transparent 55%),
+        rgba(0,0,0,0.03);
       border-color: rgba(0,0,0,0.10);
+      box-shadow:
+        var(--shadow),
+        inset 1px 1px 0 rgba(255,255,255,0.55),
+        inset -1px -1px 0 rgba(0,0,0,0.10);
     }
 
-    .board[data-density="cozy"]{
-      --cell: 20px;
-      --gap: 2px;
-      --pad: 10px;
+    /* Grid overlay drawn once (instead of per-cell boxes) */
+    .board::before{
+      content:"";
+      position:absolute;
+      inset: var(--pad);
+      border-radius: 12px;
+      pointer-events:none;
+      background:
+        linear-gradient(to right, var(--gridLine) 1px, transparent 1px),
+        linear-gradient(to bottom, var(--gridLine) 1px, transparent 1px);
+      background-size: var(--cell) var(--cell);
+      opacity: 0.9;
+      mix-blend-mode: screen;
     }
-    .board[data-density="compact"]{
-      --cell: var(--mobileCell);
-      --gap: var(--mobileGap);
-      --pad: var(--mobilePad);
+    :root[data-theme="light"] .board::before{
+      opacity: 0.55;
+      mix-blend-mode: multiply;
     }
+
+    .board[data-density="cozy"]{ --cell: 20px; --pad: 14px; }
+    .board[data-density="compact"]{ --cell: var(--mobileCell); --pad: var(--mobilePad); }
     @media (max-width: 460px){
-      .board{ --cell: var(--mobileCell); --gap: var(--mobileGap); --pad: var(--mobilePad); }
+      .board{ --cell: var(--mobileCell); --pad: var(--mobilePad); }
     }
 
+    /* Cells are now "invisible" - they only host the snake/food shapes */
     .cell{
       width: var(--cell);
       height: var(--cell);
-      border-radius: 7px;
-      border: 1px solid rgba(0,0,0,0.0);
-      background: rgba(255,255,255,0.06);
-      box-shadow:
-        inset 1px 1px 0 var(--ms-hi),
-        inset -1px -1px 0 var(--ms-lo);
-    }
-    :root[data-theme="light"] .cell{ background: rgba(0,0,0,0.04); }
-
-    .cell.snake{
-      background: linear-gradient(180deg, rgba(52,211,153,0.95), rgba(16,185,129,0.80));
-      border: 1px solid rgba(255,255,255,0.16);
-      box-shadow:
-        0 0 0 4px rgba(52,211,153,0.10),
-        inset 1px 1px 0 rgba(255,255,255,0.25),
-        inset -1px -1px 0 rgba(0,0,0,0.35);
-    }
-    :root[data-theme="light"] .cell.snake{
-      border-color: rgba(0,0,0,0.12);
-      box-shadow:
-        0 0 0 4px rgba(22,163,74,0.10),
-        inset 1px 1px 0 rgba(255,255,255,0.45),
-        inset -1px -1px 0 rgba(0,0,0,0.18);
+      position: relative;
+      background: transparent;
+      border: none;
+      border-radius: 0;
     }
 
-    .cell.head{
-      background: linear-gradient(180deg, rgba(110,231,255,0.95), rgba(59,130,246,0.80));
-      box-shadow:
-        0 0 0 6px rgba(110,231,255,0.18),
-        inset 1px 1px 0 rgba(255,255,255,0.25),
-        inset -1px -1px 0 rgba(0,0,0,0.35);
+    /* Snake segments become "rounded tiles" that connect visually */
+    .cell::after{
+      content:"";
+      position:absolute;
+      inset: 2px;
+      border-radius: 10px;
+      opacity: 0;
+      transform: scale(0.92);
+      transition: opacity .10s ease, transform .10s ease, filter .10s ease;
+      pointer-events:none;
     }
 
-    .cell.food{
-      background: radial-gradient(circle at 35% 35%, rgba(255,255,255,0.45), transparent 45%),
-                  radial-gradient(circle at 60% 65%, rgba(0,0,0,0.20), transparent 55%),
-                  rgba(251,113,133,0.95);
+    .cell.snake::after{
+      opacity: 1;
+      transform: scale(1);
+
+      background:
+        radial-gradient(circle at 30% 25%, rgba(255,255,255,0.22), transparent 55%),
+        linear-gradient(180deg, var(--snakeHi), var(--snakeLo));
+      border: 1px solid var(--snakeStroke);
+      box-shadow:
+        0 0 0 6px rgba(52,211,153,0.08),
+        inset 0 8px 14px rgba(255,255,255,0.10),
+        inset 0 -10px 18px rgba(0,0,0,0.35);
+      filter: drop-shadow(0 10px 14px rgba(0,0,0,.18));
+    }
+
+    /* Head: brighter, glowy, with subtle "eyes" */
+    .cell.head::after{
+      background:
+        radial-gradient(circle at 30% 25%, rgba(255,255,255,0.30), transparent 55%),
+        linear-gradient(180deg, rgba(110,231,255,0.88), rgba(59,130,246,0.78));
+      box-shadow:
+        0 0 0 7px rgba(110,231,255,0.14),
+        inset 0 8px 14px rgba(255,255,255,0.12),
+        inset 0 -10px 18px rgba(0,0,0,0.35);
+    }
+    .cell.head .eyes{
+      position:absolute;
+      inset: 0;
+      pointer-events:none;
+    }
+    .cell.head .eyes::before,
+    .cell.head .eyes::after{
+      content:"";
+      position:absolute;
+      width: 4px;
+      height: 4px;
+      border-radius: 999px;
+      top: 42%;
+      background: rgba(0,0,0,0.65);
+      box-shadow: 0 0 0 2px rgba(255,255,255,0.12);
+    }
+    :root[data-theme="light"] .cell.head .eyes::before,
+    :root[data-theme="light"] .cell.head .eyes::after{
+      background: rgba(0,0,0,0.55);
+      box-shadow: 0 0 0 2px rgba(255,255,255,0.22);
+    }
+    .cell.head .eyes::before{ left: 38%; }
+    .cell.head .eyes::after{ left: 58%; }
+
+    /* Food: apple-ish with highlight and glow */
+    .cell.food::after{
+      opacity: 1;
+      transform: scale(1);
+      border-radius: 999px;
+      background:
+        radial-gradient(circle at 35% 30%, rgba(255,255,255,0.55), transparent 45%),
+        radial-gradient(circle at 60% 70%, rgba(0,0,0,0.25), transparent 55%),
+        var(--food);
       border: 1px solid rgba(255,255,255,0.18);
-      box-shadow: 0 0 0 6px rgba(251,113,133,0.16);
+      box-shadow:
+        0 0 0 8px var(--foodGlow),
+        inset 0 8px 14px rgba(255,255,255,0.14),
+        inset 0 -10px 18px rgba(0,0,0,0.28);
+      filter: drop-shadow(0 10px 14px rgba(0,0,0,.18));
     }
-    :root[data-theme="light"] .cell.food{
-      border-color: rgba(0,0,0,0.10);
-      box-shadow: 0 0 0 6px rgba(251,113,133,0.12);
+    .cell.food .stem{
+      position:absolute;
+      width: 6px;
+      height: 10px;
+      left: 52%;
+      top: 20%;
+      transform: rotate(18deg);
+      background: rgba(161,98,7,0.85);
+      border-radius: 4px;
+      box-shadow: 0 0 0 2px rgba(0,0,0,0.12);
+      pointer-events:none;
+      opacity: 0.9;
     }
 
     .panel{ padding:16px; display:flex; flex-direction:column; gap:12px; }
@@ -368,7 +458,6 @@
       white-space: nowrap;
     }
     :root[data-theme="light"] .pill{ background: rgba(0,0,0,0.03); }
-
     .dot{
       width:12px; height:12px; border-radius: 999px;
       background: var(--c, #fff);
@@ -390,6 +479,7 @@
       border-radius:8px;
       color: var(--text);
       font-size:12px;
+      margin-right: 4px;
     }
     :root[data-theme="light"] kbd{
       background: rgba(0,0,0,0.04);
@@ -435,7 +525,7 @@
       color: rgba(0,0,0,0.88);
     }
 
-    /* On-screen D-pad (mobile-friendly) */
+    /* On-screen D-pad */
     .dpadWrap{
       display:flex;
       gap:12px;
@@ -820,8 +910,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     gameOverlay.innerHTML = `<div class="box">${escapeHtml(message)}</div>`;
   }
 
-  function clamp(n, a, b){ return Math.max(a, Math.min(b, n)); }
-
   // ---------- Game state ----------
   let cols = 20, rows = 20;
   let cells = [];
@@ -842,7 +930,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
 
   function idxToRC(i){ return { r: Math.floor(i / cols), c: i % cols }; }
   function rcToIdx(r,c){ return r*cols + c; }
-
   function inBounds(r,c){ return r>=0 && r<rows && c>=0 && c<cols; }
 
   function setBoardSize(){
@@ -883,7 +970,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
   }
 
   function randomEmptyCell(){
-    // Avoid infinite loops by sampling from a precomputed list
     const occ = new Set(snake);
     const empties = [];
     for (let i=0;i<cols*rows;i++){
@@ -897,12 +983,27 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     boardEl.innerHTML = "";
     cells = [];
     const total = cols*rows;
+
     for (let i=0;i<total;i++){
       const d = document.createElement("div");
       d.className = "cell";
       d.dataset.i = String(i);
       cells.push(d);
       boardEl.appendChild(d);
+    }
+  }
+
+  function ensureDecorations(){
+    // head eyes & food stem are optional elements, added only when needed
+    for (const c of cells){
+      if (c.querySelector(".eyes") && !c.classList.contains("head")) c.querySelector(".eyes").remove();
+      if (c.querySelector(".stem") && !c.classList.contains("food")) c.querySelector(".stem").remove();
+      if (c.classList.contains("head") && !c.querySelector(".eyes")){
+        const e = document.createElement("div"); e.className = "eyes"; c.appendChild(e);
+      }
+      if (c.classList.contains("food") && !c.querySelector(".stem")){
+        const s = document.createElement("div"); s.className = "stem"; c.appendChild(s);
+      }
     }
   }
 
@@ -917,6 +1018,7 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
       cells[idx].classList.add("snake");
       if (k===0) cells[idx].classList.add("head");
     }
+    ensureDecorations();
   }
 
   function resetGameState(){
@@ -926,7 +1028,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     dir = {x:1,y:0};
     nextDir = {x:1,y:0};
 
-    // Start snake centered
     const startR = Math.floor(rows/2);
     const startC = Math.floor(cols/2);
     const head = rcToIdx(startR, startC);
@@ -949,12 +1050,10 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     score = 0;
     syncScore();
 
-    // rebuild + reset to ensure size matches settings
     setBoardSize();
     setDensity();
     buildBoard();
 
-    // re-init snake positions for new grid
     dir = {x:1,y:0};
     nextDir = {x:1,y:0};
 
@@ -990,7 +1089,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     started = false;
     running = false;
     gameOver = false;
-    showOverlay(t().overlayStart);
 
     setBoardSize();
     setDensity();
@@ -1002,6 +1100,7 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     btnReset.disabled = true;
     syncControlsText();
     setStatus("", t().beforeStart);
+    showOverlay(t().overlayStart);
   }
 
   function pauseToggle(){
@@ -1036,7 +1135,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
   function tick(){
     if (!running || gameOver) return;
 
-    // Apply buffered direction change (prevents rapid multiple turns in one tick)
     dir = nextDir;
 
     const head = snake[0];
@@ -1059,7 +1157,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
 
     const next = rcToIdx(nr, nc);
 
-    // Collision with self: allow moving into tail only if tail will move away this tick.
     const tail = snake[snake.length - 1];
     const willEat = (next === foodIdx);
     const bodySet = new Set(snake);
@@ -1075,7 +1172,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
       syncScore();
       foodIdx = randomEmptyCell();
       if (foodIdx < 0){
-        // You filled the board: treat as win/stop
         endGame();
         return;
       }
@@ -1088,19 +1184,14 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
 
   // ---------- Input ----------
   function setDirection(dx, dy){
-    if (!started){
-      // allow direction selection before start without side effects
-      nextDir = {x:dx, y:dy};
-      return;
-    }
     if (gameOver) return;
 
-    // Disallow 180° turns
+    // no 180° turns
     if (dx === -dir.x && dy === -dir.y) return;
 
     nextDir = {x:dx, y:dy};
 
-    // Small QoL: if paused, a direction press resumes
+    // QoL: if paused, direction resumes
     if (started && !running && !gameOver){
       pauseToggle();
     }
@@ -1119,12 +1210,12 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     else if (k === "ArrowRight" || k === "d" || k === "D") { e.preventDefault(); setDirection(1,0); }
   }
 
-  // Touch: swipe on board
+  // Touch swipe on board
   let touchStart = null;
   function onTouchStart(e){
     if (!e.touches || e.touches.length !== 1) return;
     const t = e.touches[0];
-    touchStart = {x: t.clientX, y: t.clientY, t: Date.now()};
+    touchStart = {x: t.clientX, y: t.clientY};
   }
   function onTouchEnd(e){
     if (!touchStart) return;
@@ -1137,7 +1228,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     const absX = Math.abs(dx);
     const absY = Math.abs(dy);
 
-    // threshold
     if (Math.max(absX, absY) < 22){
       touchStart = null;
       return;
@@ -1150,7 +1240,7 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     touchStart = null;
   }
 
-  // On-screen buttons (pointerdown for snappy mobile)
+  // On-screen buttons
   function bindDir(btn, dx, dy){
     const handler = (e) => {
       e.preventDefault();
@@ -1167,14 +1257,11 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     btnNew.textContent = L.newGame;
     btnReset.textContent = L.reset;
 
-    if (!started){
-      btnPause.textContent = L.pause;
-    } else if (gameOver){
+    if (!started || gameOver){
       btnPause.textContent = L.pause;
     } else {
       btnPause.textContent = running ? L.pause : L.resume;
     }
-
     syncScore();
   }
 
@@ -1234,7 +1321,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
   function init(){
     setLang(getLang());
 
-    // load saved settings
     const savedSpeed = localStorage.getItem("snake_speed");
     if (savedSpeed) speedEl.value = savedSpeed;
 
@@ -1244,7 +1330,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     const savedWrap = localStorage.getItem("snake_wrap");
     if (savedWrap) wrapEl.value = savedWrap;
 
-    // apply settings
     setSpeed();
     setBoardSize();
     setDensity();
@@ -1256,17 +1341,10 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     resetGameState();
     applyTranslations();
 
-    // events
     document.addEventListener("keydown", onKey, {passive:false});
 
     boardEl.addEventListener("touchstart", onTouchStart, {passive:true});
     boardEl.addEventListener("touchend", onTouchEnd, {passive:true});
-
-    // Prevent scrolling when touching board on mobile
-    boardEl.addEventListener("pointerdown", () => {
-      // keep focus for keyboard use
-      boardEl.focus?.();
-    });
 
     bindDir(btnUp, 0, -1);
     bindDir(btnDown, 0, 1);
@@ -1296,7 +1374,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
 
     speedEl.addEventListener("change", () => {
       setSpeed();
-      // if running, restart interval with new speed
       if (started && !gameOver){
         clearTimer();
         timer = setInterval(tick, tickMs);
@@ -1304,7 +1381,7 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
     });
 
     sizeEl.addEventListener("change", () => {
-      if (started) return; // lock during game (like your Shift-4 setup)
+      if (started) return;
       setBoardSize();
       buildBoard();
       resetGameState();
@@ -1328,7 +1405,6 @@ Använd pilarna på sidan. Du kan också svepa över brädet.
       applyTranslations();
     });
 
-    // Initial overlay
     showOverlay(t().overlayStart);
   }
 
